// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> Renders the <Profiles/> with populated data 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 khxgvE"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 dhTqjW"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 kcDWLv"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 jHZFyh"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 cyFckY"
        data-testid="profile-picture"
        src="/images/users//images/ting.png.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 hByAmj"
      >
        Ting-Ting Chen
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> Renders the <Profiles/> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 khxgvE"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 dhTqjW"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 kcDWLv"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 jHZFyh"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 cyFckY"
        data-testid="profile-picture-misc"
        src="/images/users//images/ting.png.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 hByAmj"
      >
        Ting-Ting Chen
      </p>
    </li>
  </ul>
</div>
`;
